<resources>
    <string name="app_name">PerfilDesarrolladorAndroid</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="personas">Personas</string>
    <string name="carros">Carros</string>
    <string name="noAdd">No has agregado ninguna persona presiona el boton + para agregar una nueva persona</string>
    <string name="verdadero">Verdadero</string>
    <string name="falso">falso</string>
    <string name="identificacion">*Identificación:</string>
    <string name="nombre">*Nombre:</string>
    <string name="apellido">*Apellido:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="profesion">Profesión</string>
    <string name="casado">Casado:</string>
    <string name="salario">Salario:</string>
    <string name="guardar">Guardar</string>
    <string name="no_autos">No se han agregado autos</string>
    <string name="marca">*Marca</string>
    <string name="placa">Placa</string>
    <string name="modelo">Modelo</string>
    <string name="tipo_de_vehiculo">Tipo de Vehiculo</string>
    <string name="numero_de_puertas">Numero de puertas</string>
    <string name="personalizar_auto">Personalizar Auto</string>
    <string name="color_llantas">Color Llantas</string>
    <string name="noAddCar">No has agregado ningun auto presiona el boton + para agregar un nuevo auto</string>
    <string name="noAddHistory">Este usuario no ha tenido ningun auto vinculado</string>
    <string name="ruedas">Ruedas</string>
    <string name="capo">Capo</string>
    <string name="puertas">Puertas</string>
    <string name="settings">Opciones de sincronización</string>
    <string name="sincroNow">Toca en la imagen para sincronizar ahora</string>
    <string name="programar">Programar</string>
    <string name="programar_sincronizaci_n">Programar Sincronización</string>

    <string-array name="country_arrays">
        <item></item>
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Citroën</item>
        <item>Dodge</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Toyota</item>
        <item>Volkswagen</item>

    </string-array>
</resources>
