<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvTitleCar"
                android:text="title"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorRed"
                android:text="@string/placa"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etPlateCar"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="25dp"
                android:text="@string/marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/etBrandCar"
                android:layout_width="match_parent"
                android:entries="@array/country_arrays"
                android:layout_height="30dp" />
            <TextView
                android:textColor="@color/colorRed"
                android:text="@string/modelo"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etModelCar"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/tipo_de_vehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etTypeCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvNumDoorsCar"
                android:layout_marginTop="25dp"
                android:text="@string/numero_de_puertas"
                android:textColor="@color/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spListCars"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <android.support.v7.widget.CardView
                android:id="@+id/cvBtnPersonalizeCar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="39dp"
                android:layout_gravity="center"
                android:layout_marginBottom="39dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="25dp"
                app:cardElevation="50dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="11dp"
                        android:text="@string/personalizar_auto"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvColorWheels"
                    android:text="@string/ruedas"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvColorHood"
                    android:text="@string/capo"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvColorDoor"
                    android:text="@string/puertas"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:layout_marginTop="25dp"
                android:id="@+id/btnSave"
                android:text="@string/guardar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>