<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SettingActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textSize="35dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/btnSynchronization"
                        android:src="@drawable/synchronization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="20dp"
                        android:text="@string/sincroNow"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="35dp"
                        android:text="@string/programar_sincronizaci_n"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TimePicker
                        android:id="@+id/timePickerTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:datePickerMode="spinner"
                        android:spinnersShown="true"
                        android:layout_marginTop="15dp"

                        />
                    <android.support.v7.widget.CardView
                        android:id="@+id/cvBtnProgrammingTask"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="39dp"

                        android:layout_gravity="center"
                        android:layout_marginBottom="39dp"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="50dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                android:layout_marginBottom="11dp"
                                android:text="@string/programar"
                                android:textColor="#fff"
                                android:textSize="18sp" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


</LinearLayout>